# ZenboNurseHelper_ServerSide

./: README.md
cpp/: CMakeLists (1).txt  CMakeLists.txt  Main.cpp  ProcessAudio.cpp  ProcessAudio.hpp  ProcessImage.cpp  README.md  SocketToServer.cpp  SocketToServer.hpp  mainwindow.cpp  mainwindow.ui  run_server_side_program.sh
